--- a/src/main/resources/public/css/chat.css
+++ b/src/main/resources/public/css/chat.css
@@ -28,6 +28,7 @@ body {
 }
 
 .chatList {
+    padding-left: 15px;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -39,8 +40,17 @@ body {
 }
 
 .chatList-item {
-    display: flex;  padding: 5px;
-    height: 3.5em;
+    display: flex;  
+    padding: 5px;
+    height: 2.5em;
+    cursor: pointer;
+}
+
+.chatList-console {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    height: 2.5em;
 }
 
 .chatList-item p {
@@ -55,8 +65,6 @@ body {
 }
 .chatList-title {
     margin: 0;
-    color: #000000;
-    font-size: 1.1em;
 }
 
 .chatList-content {
@@ -66,6 +74,20 @@ body {
 
 .chatList-time {
     color: #000;
+}
+
+.dropdown-content {
+    padding: 5px 15px 5px 15px;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    background-color: #f9f9f9;
+    border: 1px solid #cccccc;
+    cursor: pointer;
+}
+
+.dropdown-item {
+    border-bottom: 1px solid #cccccc;
 }
 
 #msgView {
@@ -91,9 +113,26 @@ body {
 
 #btn-sendMsg {
     width: 5em;
-    height: 20%;
-    background-color: #00bcd4;
-    color: #ffffff;
-    border-radius: 5px;
-    border: 0;
+    --bs-info: #0dcaf0;
+    font-family: var(--bs-body-font-family);
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: transparent;
+    box-sizing: border-box;
+    -webkit-appearance: button;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    color: #000;
+    background-color: #0dcaf0;
+    border-color: #0dcaf0;
+    cursor: pointer;
 }
