--- a/src/main/resources/public/css/chat.css
+++ b/src/main/resources/public/css/chat.css
@@ -169,7 +169,7 @@ body {
     display: flex;
     height: 2.5em;
     align-items: center;
-    padding: 10px 20px 10px 20px;
+    padding: 10px 10px 10px 20px;
     margin-bottom: 10px;
 }
 
@@ -197,6 +197,7 @@ body {
 }
 
 .myBtn-close {
+    margin-left: 10px;
     box-sizing: content-box;
     padding: .25em;
     color: #000;
