--- a/src/main/resources/public/css/chat.css
+++ b/src/main/resources/public/css/chat.css
@@ -141,12 +141,12 @@ body {
     user-select: none;
     border: 1px solid transparent;
     padding: .375rem .75rem;
-    font-size: 1rem;
     border-radius: .25rem;
     transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
     color: #000;
     background-color: #0dcaf0;
     cursor: pointer;
+    font-size: 15px;
 }
 
 .msgInput {
