--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -37,7 +37,7 @@ body {
     width: 45%;
     background-color: #FFFFFF;
     padding: 10px 20px 10px 30px;
-    align-items: center;
+    align-items: left;
 }
 
 .title {
@@ -46,20 +46,18 @@ body {
 
 input {
     font-size: 18px;
-    margin: 5px 10px 5px 10px;
-    padding: 8px 26px;
-    width: 84%;
+    margin: 5px 10px 5px 0;
+    padding: .5em;
+    width: 93%;
 }
 
 .btn {
-    margin: 5px 10px 5px 10px;
-    width: 84%;
+    width: 85%;
     border-radius: 4px;
     box-sizing: inherit;
     font: inherit;
     -webkit-appearance: button;
     cursor: pointer;
-    min-height: 1em;
     outline: none;
     border: none;
     text-transform: none;
